--- a/css/inicioStyles.css
+++ b/css/inicioStyles.css
@@ -559,3 +559,97 @@ a.btn {
 .separacion-BTN {
     padding: 15px;
 }
+
+/* ESTILOS PAGINA DE ANTES DEL LOGIN: */
+
+.botones-inicio{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: #23241d;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 35px;
+    z-index: 1;
+}
+
+.grid-buttons{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.div1 a{
+    width: 40%!important;
+}
+
+.div1 { grid-area: 1 / 1 / 2 / 3; }
+.div2 { grid-area: 2 / 1 / 3 / 2; }
+.div3 { grid-area: 2 / 2 / 3 / 3; }
+.div4 { grid-area: 3 / 1 / 4 / 2; }
+.div5 { grid-area: 3 / 2 / 4 / 3; }
+
+@media(max-width: 620px){
+    .grid-buttons{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+    }
+    a, .div1 a{
+        width: 100%!important;
+    }
+    .div1 { grid-area: 1 / 1 / 2 / 3; }
+    .div2 { grid-area: 2 / 1 / 3 / 3; }
+    .div3 { grid-area: 3 / 1 / 4 / 3; }
+    .div4 { grid-area: 4 / 1 / 5 / 3; }
+    .div5 { grid-area: 5 / 1 / 6 / 3; }
+}
+
+div.grid-buttons div[class*="button-"]{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid-buttons a{
+    width: 70%;
+    height: 70%;
+    padding: 15px;
+    background-color: #17180f;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .3);
+    transition: all 0.2s;
+    text-decoration: none;
+}
+
+.grid-buttons a:hover{
+    transform: scale(105%, 105%);
+}
+
+/* ---- particles.js container ---- */
+
+#particles-js {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+}
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    /* vertical-align: bottom; */
+}
