--- a/css/crudsStyles.css
+++ b/css/crudsStyles.css
@@ -130,8 +130,14 @@ label, .fondo-form h3{
     margin-top: 20px;
 }
 
-div.card-body form div.form-group:last-child{
+.div-form-group{
     margin-top: 25px;
+    display: flex;
+    gap: 20px;
+}
+
+.form-group{
+    width: 100%;
 }
 
 .div-filtros{
