--- a/css/inicioStyles.css
+++ b/css/inicioStyles.css
@@ -62,6 +62,7 @@ body {
     position: relative;
     justify-content: flex-start;
     margin: 0px 10px;
+    cursor: pointer;
 }
 
 .region-navbar .widget-navbar .justify-end {
@@ -565,75 +566,74 @@ a.btn {
 .botones-inicio{
     position: relative;
     width: 100%;
-    height: 100%;
     background: #23241d;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 35px;
+    padding: 100px;
     z-index: 1;
 }
 
 .grid-buttons{
     width: 100%;
     height: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-}
-
-.div1 a{
-    width: 40%!important;
-}
-
-.div1 { grid-area: 1 / 1 / 2 / 3; }
-.div2 { grid-area: 2 / 1 / 3 / 2; }
-.div3 { grid-area: 2 / 2 / 3 / 3; }
-.div4 { grid-area: 3 / 1 / 4 / 2; }
-.div5 { grid-area: 3 / 2 / 4 / 3; }
-
-@media(max-width: 620px){
-    .grid-buttons{
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-    }
-    a, .div1 a{
-        width: 100%!important;
-    }
-    .div1 { grid-area: 1 / 1 / 2 / 3; }
-    .div2 { grid-area: 2 / 1 / 3 / 3; }
-    .div3 { grid-area: 3 / 1 / 4 / 3; }
-    .div4 { grid-area: 4 / 1 / 5 / 3; }
-    .div5 { grid-area: 5 / 1 / 6 / 3; }
+    display: flex;
+    gap: 60px;
 }
 
 div.grid-buttons div[class*="button-"]{
+    position: relative;
+    width: 50%;
+    height: 100%;
+    padding: 50px;
     display: flex;
+    flex-direction: column;
+    gap: 30px;
     justify-content: center;
     align-items: center;
-}
-
-.grid-buttons a{
-    width: 70%;
-    height: 70%;
-    padding: 15px;
     background-color: #17180f;
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border-radius: 20px;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .3);
     transition: all 0.2s;
-    text-decoration: none;
 }
 
-.grid-buttons a:hover{
+@media (max-width: 930px){
+    .grid-buttons{
+        flex-direction: column;
+    }
+    .grid-buttons div[class*="button-"]{
+        width: 100%!important;
+    }
+}
+
+.grid-buttons div[class*="button-"]:hover{
     transform: scale(105%, 105%);
+}
+
+.grid-buttons div[class*="button-"] img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.grid-buttons div[class*="button-"] a{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.grid-buttons div[class*="button-"] p{
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
 }
 
 /* ---- particles.js container ---- */
@@ -643,7 +643,7 @@ div.grid-buttons div[class*="button-"]{
     left: 0;
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     padding: 100px;
 }
 canvas {
@@ -741,3 +741,19 @@ canvas {
         display: none;
     }
 }
+
+.mesas-n{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+.averiado{
+    background-color: rgb(253, 253, 135);
+    border: solid 2px yellow;
+}
+.ocupado{
+    background-color: rgb(255, 126, 126);
+    border: solid 2px red;
+}
+
